Unity AI packages

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     }
   ],
   "dependencies": {
+    "com.danieleverland.scriptableobjectarchitecture": "https://github.com/DanielEverland/ScriptableObject-Architecture.git#release/stable",
     "com.unity-atoms.unity-atoms-base-atoms": "4.5.0",
     "com.unity-atoms.unity-atoms-core": "4.5.0",
     "com.unity-atoms.unity-atoms-fsm": "4.5.0",
@@ -27,13 +28,16 @@
     "com.unity-atoms.unity-atoms-tags": "4.5.0",
     "com.unity-atoms.unity-atoms-ui": "4.5.0",
     "com.unity.2d.animation": "12.0.2",
+    "com.unity.2d.enhancers": "1.0.0",
     "com.unity.2d.pixel-perfect": "5.1.0",
     "com.unity.2d.psdimporter": "11.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "12.0.1",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "5.0.1",
-    "com.danieleverland.scriptableobjectarchitecture": "https://github.com/DanielEverland/ScriptableObject-Architecture.git#release/stable",
+    "com.unity.ai.assistant": "1.0.0-pre.12",
+    "com.unity.ai.generators": "1.0.0-pre.20",
+    "com.unity.ai.inference": "2.4.1",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.2.0",
