--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -29,8 +29,6 @@
     "com.unity-atoms.unity-atoms-ui": "4.5.0",
     "com.unity.2d.animation": "12.0.2",
     "com.unity.2d.enhancers": "1.0.0",
-    "com.unity.2d.pixel-perfect": "5.1.0",
-    "com.unity.2d.psdimporter": "11.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "12.0.1",
     "com.unity.2d.tilemap": "1.0.0",
@@ -38,6 +36,7 @@
     "com.unity.ai.assistant": "1.0.0-pre.12",
     "com.unity.ai.generators": "1.0.0-pre.20",
     "com.unity.ai.inference": "2.4.1",
+    "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.2.0",
